@@ -6,6 +6,7 @@ import b1nd.dodam.domain.rds.division.service.DivisionService;
 import b1nd.dodam.domain.rds.member.entity.Member;
 import b1nd.dodam.domain.rds.notice.entity.Notice;
 import b1nd.dodam.domain.rds.notice.entity.NoticeDivision;
+import b1nd.dodam.domain.rds.notice.entity.NoticeFile;
 import b1nd.dodam.domain.rds.notice.enumration.NoticeStatus;
 import b1nd.dodam.domain.rds.notice.service.NoticeDivisionService;
 import b1nd.dodam.domain.rds.notice.service.NoticeService;
@@ -19,6 +20,8 @@ import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -26,22 +29,23 @@ import java.util.List;
 public class NoticeUseCase {
 
     private final NoticeService noticeService;
-    private final NoticeDivisionService noticeDivisionService;
     private final DivisionService divisionService;
+    private final NoticeDivisionService noticeDivisionService;
     private final DivisionMemberService divisionMemberService;
     private final MemberAuthenticationHolder memberAuthenticationHolder;
 
-    public ResponseData<Long> register(GenerateNoticeReq generateNoticeReq){
+    public ResponseData<Long> register(GenerateNoticeReq generateNoticeReq) {
         Member member = memberAuthenticationHolder.current();
         Notice notice = noticeService.save(generateNoticeReq.toEntity(member));
 
+        List<NoticeFile> noticeFiles = generateNoticeReq.toNoticeFiles(notice);
+        noticeService.saveAllNoticeFiles(noticeFiles);
+
         List<Division> divisions = divisionService.getAllByIds(generateNoticeReq.divisions());
-
         List<NoticeDivision> noticeDivisions = generateNoticeReq.toEntity(notice, divisions);
-
-        noticeService.changeStatus(notice.getId(), NoticeStatus.CREATED);
         noticeDivisionService.saveAll(noticeDivisions);
 
+        noticeService.changeStatus(notice.getId(), NoticeStatus.CREATED);
         return ResponseData.of(HttpStatus.OK, "공지 생성 성공", notice.getId());
     }
 
@@ -50,19 +54,24 @@ public class NoticeUseCase {
         Member member = memberAuthenticationHolder.current();
         List<Long> divisionIds = divisionMemberService.getIdsByMember(member);
         List<Notice> notices = noticeService.getAllByStatus(keyword, divisionIds, status, lastId, limit);
-        return ResponseData.of(HttpStatus.OK, "전체 공지 불러오기 성공", NoticeRes.of(notices));
+        List<NoticeRes> noticeResList = convertToNoticeRes(notices);
+        return ResponseData.of(HttpStatus.OK, "전체 공지 불러오기 성공", noticeResList);
     }
 
     @Transactional(readOnly = true)
-    public ResponseData<List<NoticeRes>> getNoticesByDivision(Long divisionId, Long lastId, int limit){
+    public ResponseData<List<NoticeRes>> getNoticesByDivision(Long divisionId, Long lastId, int limit) {
         Member member = memberAuthenticationHolder.current();
         Division division = divisionService.getById(divisionId);
+        List<Notice> notices = noticeService.getAllByDivision(member.getId(), division.getId(), lastId, limit);
+        List<NoticeRes> noticeResList = convertToNoticeRes(notices);
+        return ResponseData.of(HttpStatus.OK, "카테고리별 공지 불러오기 성공", noticeResList);
+    }
 
-        List<Notice> notices = noticeService.getAllByDivision(member.getId(), division.getId(), lastId, limit)
-                .stream()
-                .toList();
-
-        return ResponseData.of(HttpStatus.OK, "카테고리별 공지 불러오기 성공", NoticeRes.of(notices));
+    private List<NoticeRes> convertToNoticeRes(List<Notice> notices) {
+        Map<Long, List<NoticeFile>> noticeFileMap = noticeService.getNoticeFileMap(notices);
+        return notices.stream()
+                .map(notice -> NoticeRes.of(notice, noticeFileMap.getOrDefault(notice.getId(), List.of())))
+                .collect(Collectors.toList());
     }
 
 }
