@@ -25,27 +25,27 @@ public record GenerateNoticeReq (@NotEmpty String title, @NotEmpty String conten
                 .member(member)
                 .build();
 
-        if (files != null && !files.isEmpty()) {
-            files.forEach(file -> notice.addNoticeFiles(
-                    NoticeFile.builder()
-                            .fileUrl(file.url())
-                            .fileName(file.name())
-                            .fileType(file.fileType())
-                            .build()
-            ));
-        }
-
         return notice;
+    }
+
+    public List<NoticeFile> toNoticeFiles(Notice notice) {
+        if (files == null || files.isEmpty()) {
+            return List.of();
+        }
+        return files.stream()
+                .map(file -> NoticeFile.builder()
+                        .fileUrl(file.url())
+                        .fileName(file.name())
+                        .fileType(file.fileType())
+                        .notice(notice)
+                        .build())
+                .toList();
     }
 
     public List<NoticeDivision> toEntity(Notice notice, List<Division> divisions) {
         return divisions.stream()
-                .map(division -> {
-                    NoticeDivision noticeDivision = GenerateNoticeReq.toEntity(notice, division);
-                    notice.addNoticeDivision(noticeDivision);
-                    return noticeDivision;
-                })
-                .collect(Collectors.toList());
+                .map(division -> GenerateNoticeReq.toEntity(notice, division))
+                .toList();
     }
 
     public static NoticeDivision toEntity(Notice notice, Division division){
